fixed the price filter currency not showing

--- a/src/css/searchbar.css
+++ b/src/css/searchbar.css
@@ -69,13 +69,13 @@
 .searchbar:hover > .search_input{
     padding: 0 10px;
     width: 80%;
-    caret-color:red;
+    caret-color:#fff;
     transition: width 0.4s linear;
 }
 
 .searchbar:hover > .search_icon{
-    background: white;
-    color: #e74c3c;
+
+    color: #fff;
 }
 
 .search_icon{
